# py-game-of-life

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
py_game_of_life/: __init__.py  __main__.py  cli.py  grid.py  patterns.py  views.py
